Projects from HTML course

--- a/Basic_HTML_3.html
+++ b/Basic_HTML_3.html
@@ -10,5 +10,6 @@
 <body> <div> <q style="font-size:18px"> If you want an organic loaf it'll cost around 5</q> </div> 
 </body>		
 <link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
-<p> Some bread has seeds </p>
+<p> <em>Some bread has seeds</em> </p>
+<a href="http://google.com" target="new">Search for bread</a>
 </html>
