Add nav elements

--- a/One-Page Website/one-page-website.html
+++ b/One-Page Website/one-page-website.html
@@ -9,7 +9,9 @@
 		<a href="#gallery"><li>ALLIGATOR GALLERY</li> </a>
 		<a href="#contact"><li>CONTACT US</li> </a>
 		</ul>
-</nav>	
+</nav>
+<div id="home">
+<section>	
 <b>  
 <p>Alligators are an ancient species and should be protected here are some facts from TreeHugger</p>
 <blockquote cite="https://www.treehugger.com/alligator-facts-5119214">
@@ -17,7 +19,8 @@ Alligators, along with other crocodilians, have gone through very little evoluti
 </blockquote>
 
 
-
+</section>
+</div>
 <section>
 	<div id="gallery">
 		<h1>Gallery</h1>
@@ -55,8 +58,9 @@ Alligators, along with other crocodilians, have gone through very little evoluti
 						</div>
 						<!-- END PHOTO-CONTAINER 3 -->
 </b>
-<br 
-<br
+<br> 
+<section>
+	<div id="contact">
 <h1> Do you have questions about Alligators? Please contact us</h1>
 <form>
   <label for="fname">First name:</label><br>
@@ -67,7 +71,8 @@ Alligators, along with other crocodilians, have gone through very little evoluti
   <input type="text" id="email" name="email" value="Email"><br>
   <input type="submit" value="Submit">
 
-</form> 
+</form> </div>
+</section>
 <br> Alligators can be our friends 
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YWkkpluLpcE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
