--- a/Project/skeleton.html
+++ b/Project/skeleton.html
@@ -14,7 +14,7 @@
 			<ul class="menu">
 				<a href="#home"><li>HOME</li></a>
 				<a href="#gallery"><li>GALLERY</li></a>
-				<a href="#contact"><li>RESERVATION</li></a>
+				<a href="#reservation"><li>RESERVATION</li></a>
 			</ul>
 			</div>
 	</div>
@@ -24,7 +24,7 @@
 	<div id="home">
 		<div class="container">
 			<div class="text-center">
-				<span class="head-main">Wheel Museum</span>
+				<span class="head-main">Wheels</span>
 			</div>
 		</div>
 	</div>
@@ -39,7 +39,7 @@
 				<!----PHOTO CONTAINER 1 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-1.png" alt="Wheels">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -50,7 +50,7 @@
 				<!----PHOTO CONTAINER 2 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-2.png" alt="">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -62,7 +62,7 @@
 				<!----PHOTO CONTAINER 3 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-3.png" alt="">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -74,7 +74,7 @@
 				<!----PHOTO CONTAINER 4 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-4.png" alt="">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -86,7 +86,7 @@
 				<!----PHOTO CONTAINER 5 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-5.png" alt="">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -98,7 +98,7 @@
 				<!----PHOTO CONTAINER 6 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-6.png" alt="">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -110,7 +110,7 @@
 				<!----PHOTO CONTAINER 7 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-7.png" alt="">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -122,7 +122,7 @@
 				<!----PHOTO CONTAINER 8 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-8.png" alt="">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -134,7 +134,7 @@
 				<!----PHOTO CONTAINER 9 -->
 				<div class="photo-container">
 					<div class="photo">
-						<img src="./images/thumb/th-9.png" alt="">
+						<img src="" alt="">
 						<div class="photo-overlay">
 							<h3>Click to Enlarge</h3>
 							<p></p>
@@ -146,15 +146,14 @@
 		</div>
 	</section>
 	<!--END GALLERY-->
-	
 	<!--RSVP-->
 	<section id="contact">
 		<div class="container">
 			<div class="heading-padding">
 				<h1 class="heading-padding">Reservations</h1>
 				<div class="reservation">
-					<h2> <span>Wheels Make The World Go 'Round </span> 
-						<br>Take A Spin!
+					<h2> <span>Your adventure is just around the moon </span> 
+						<br>Reserve your flight today!
 					</h2>
 					<p class="rsvp-text">
 					Please provide us with your basic contact information.	
