One page website

--- a/One-Page Website/one-page-website.html
+++ b/One-Page Website/one-page-website.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <header>AlliGate</header>
+<head>
+	<link rel="stylesheet" href="./css/one_page_website.css">
 <h1>Alligator Facts</h1>
 <nav>
 	<ul>
@@ -10,6 +12,7 @@
 		<a href="#contact"><li>CONTACT US</li> </a>
 		</ul>
 </nav>
+<div class="body">
 <div id="home">
 <section>	
 <b>  
@@ -63,21 +66,22 @@ Alligators, along with other crocodilians, have gone through very little evoluti
 	<div id="contact">
 <h1> Do you have questions about Alligators? Please contact us</h1>
 <form>
+	<div class="form">
   <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="First Name Here"><br>
+  <input class="form" type="text" id="fname" name="fname" value="First Name Here"><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Last Name Here"><br><br>
+  <input class="form" type="text" id="lname" name="lname" value="Last Name Here"><br><br>
   <label for="email">Email:</label><br>
-  <input type="text" id="email" name="email" value="Email"><br>
-  <input type="submit" value="Submit">
-
+  <input class="form" type="text" id="email" name="email" value="Email"><br>
+  <input class="form" type="submit" value="Submit">
+	</div>
 </form> </div>
 </section>
 <br> Alligators can be our friends 
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YWkkpluLpcE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
+</div>
 </body>
 <footer>
   <p>Author: Jeremy Patton</p>
